@@ -32,6 +32,7 @@ CVS			+ Added configuration manager  (Matteo, 2001-11-04)
 			+ Added the ability to change the target frame for each banner  (Niels, 2002-04-14)
 			+ Added new style JavaScript invocation, with the ability to prevent one banner from being displayed twice on one page  (Niels, 2002-04-30)
 			+ Added the ability to change the target frame for converted Flash banners (Niels, 2002-07-04)
+			+ During link conversion of Flash files, it is now possible to compress uncompressed files, even created by older versions of Flash  (Niels, 2002-07-04)
 
 			+ Misc changes to library and function names
 			  - 2001-10-20:  Renamed nocache.inc.php to lib-cache.inc.php  (Niels) 
